styles/form.css
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh; /* Ensure the body covers the entire viewport height */
    background-color: #222; /* Dark background color */
    color: #ddd; /* Light text color */
    overflow-y: auto; /* Allow vertical overflow */
}

.container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.instructions {
    font-family: Courier, monospace;
    margin-bottom: 20px;
    text-align: left;
    width: 80%; /* Adjust this value to match the width of the form */
    max-width: 600px; /* Adjust this value to match the maximum width of the form */
    margin: 0 auto; /* Center the instructions horizontally */
}

#emailPlaceholder:hover {
   cursor: pointer;
   color: orange;
}

form {
    width: 80%;
    max-width: 600px;
    margin: 20px; /* Add margin around the form */
    padding: 20px;
    border-radius: 10px;
    background-color: #333; /* Darker background color */
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Shadow effect */
}

label {
    display: block;
    margin-bottom: 5px;
    font-weight: bold;
}
input[type="text"],
input[type="email"],
textarea {
    width: 100%;
    margin-bottom: 10px;
    padding: 8px;
    box-sizing: border-box;
    border: 1px solid #555; /* Darker border color */
    border-radius: 5px;
    background-color: #444; /* Darker input background color */
    color: #ddd; /* Light text color */
    transition: border-color 0.3s ease, background-color 0.3s ease;
}
input[type="text"]:focus,
input[type="email"]:focus,
textarea:focus {
    outline: none;
    border-color: #888; /* Lighter border color on focus */
}
textarea {
    resize: vertical; /* Allow vertical resizing of textarea */
}
button {
    width: 100%;
    padding: 10px;
    border: none;
    border-radius: 5px;
    background-color: #4CAF50; /* Green button color */
    color: #fff; /* White text color */
    cursor: pointer;
    transition: background-color 0.3s ease;
    margin-bottom: 10px; /* Add margin between buttons */
}
button:last-child {
    margin-bottom: 0; /* Remove margin from the last button */
}
button:hover {
    background-color: #45a049; /* Darker green on hover */
}

